unpackaged/main/default/objects/Opportunity/Opportunity.object-meta.xml
<CustomObject>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>