unpackaged/main/default/objects/Opportunity/fields/CurrentGenerators__c.field-meta.xml
<CustomField>
	<fullName>CurrentGenerators__c</fullName>
	<label>Current Generator(s)</label>
	<length>100</length>
	<type>Text</type>
</CustomField>