unpackaged/main/default/objects/Opportunity/fields/DeliveryInstallationStatus__c.field-meta.xml
<CustomField>
	<fullName>DeliveryInstallationStatus__c</fullName>
	<label>Delivery/Installation Status</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>In progress</fullName>
			</value>
			<value>
				<fullName>Yet to begin</fullName>
			</value>
			<value>
				<fullName>Completed</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>