unpackaged/main/default/objects/Opportunity/fields/OrderNumber__c.field-meta.xml
<CustomField>
	<fullName>OrderNumber__c</fullName>
	<label>Order Number</label>
	<length>8</length>
	<type>Text</type>
</CustomField>