unpackaged/main/default/objects/Opportunity/fields/TrackingNumber__c.field-meta.xml
<CustomField>
	<fullName>TrackingNumber__c</fullName>
	<label>Tracking Number</label>
	<length>12</length>
	<type>Text</type>
</CustomField>