unpackaged/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
	<fullName>AllOpportunities</fullName>
	<filterScope>Everything</filterScope>
	<label>All Opportunities</label>
</ListView>