unpackaged/main/default/objects/Opportunity/listViews/ClosingNextMonth.listView-meta.xml
<ListView>
	<fullName>ClosingNextMonth</fullName>
	<filterScope>Everything</filterScope>
	<filters>
		<field>OPPORTUNITY.CLOSED</field>
		<operation>equals</operation>
		<value>0</value>
	</filters>
	<filters>
		<field>OPPORTUNITY.CLOSE_DATE</field>
		<operation>equals</operation>
		<value>NEXT_MONTH</value>
	</filters>
	<label>Closing Next Month</label>
</ListView>