unpackaged/main/default/objects/Opportunity/listViews/ClosingThisMonth.listView-meta.xml
<ListView>
	<fullName>ClosingThisMonth</fullName>
	<filterScope>Everything</filterScope>
	<filters>
		<field>OPPORTUNITY.CLOSED</field>
		<operation>equals</operation>
		<value>0</value>
	</filters>
	<filters>
		<field>OPPORTUNITY.CLOSE_DATE</field>
		<operation>equals</operation>
		<value>THIS_MONTH</value>
	</filters>
	<label>Closing This Month</label>
</ListView>