unpackaged/main/default/objects/Opportunity/listViews/NewThisWeek.listView-meta.xml
<ListView>
	<fullName>NewThisWeek</fullName>
	<filterScope>Everything</filterScope>
	<filters>
		<field>OPPORTUNITY.CREATED_DATE</field>
		<operation>equals</operation>
		<value>THIS_WEEK</value>
	</filters>
	<label>New This Week</label>
</ListView>