unpackaged/main/default/objects/Opportunity/listViews/Private.listView-meta.xml
<ListView>
	<fullName>Private</fullName>
	<filterScope>Everything</filterScope>
	<filters>
		<field>OPPORTUNITY.PRIVATE</field>
		<operation>equals</operation>
		<value>1</value>
	</filters>
	<label>Private</label>
</ListView>