unpackaged/main/default/objects/Opportunity/listViews/Won.listView-meta.xml
<ListView>
	<fullName>Won</fullName>
	<filterScope>Everything</filterScope>
	<filters>
		<field>OPPORTUNITY.CLOSED</field>
		<operation>equals</operation>
		<value>1</value>
	</filters>
	<filters>
		<field>OPPORTUNITY.WON</field>
		<operation>equals</operation>
		<value>1</value>
	</filters>
	<label>Won</label>
</ListView>